--- a/Nabla1.html
+++ b/Nabla1.html
@@ -15,7 +15,7 @@
             <div class="wrapper">
                 <div class="first__logotype">
                     <a href="/">
-                        <img src="logo.png" alt="Logotype">
+                        <img src="Logo.png" alt="Logotype">
                     </a>
                 </div>
                 <div class="first__mobile">
